--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
+    <title>GameHub - The universe of games</title>
+    <meta name="description" content="This is the home page of GameHub.">
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html"></a>Home</a></li>
+          <li><a href="game.index"></a>Game</li>
+          <li><a href="createaccount.index">Create Account</a></li>
+          <li><a href="login.index">Login</a></li>
+          <li><a href="search.index">Search</a></li>
+          <li><a href="checkout.index">Checkout</a></li>
+          <li><a href="chekcoutsuccess.index">Checkout Success</a></li>
+          <li><a href="contact.index">Contact</a> </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+      <li><a href="about.index">About</a></li>
+
+    </footer>
   </body>
 </html>
