--- a/index.html
+++ b/index.html
@@ -6,26 +6,43 @@
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
+
     <header>
       <nav>
         <ul>
           <li><a href="index.html"></a>Home</a></li>
-          <li><a href="game.index"></a>Game</li>
-          <li><a href="createaccount.index">Create Account</a></li>
+          <li><a href="contact.index">Contact Us</a> </li>
+          <li><a href="createaccount.index">Register</a></li>
           <li><a href="login.index">Login</a></li>
           <li><a href="search.index">Search</a></li>
-          <li><a href="checkout.index">Checkout</a></li>
-          <li><a href="chekcoutsuccess.index">Checkout Success</a></li>
-          <li><a href="contact.index">Contact</a> </li>
+        </ul>
+      </nav>
+
+      <nav>
+        <ul>
+          <li> <a href="game.index">Action</a></li>
+          <li><a href="game.index">Adventure</a> </li>
+          <li><a href="game.index">Fantasy</a> </li>
+          <li><a href="game.index">RPG</a> </li>
+          <li><a href="game.index">Strategy</a> </li>
         </ul>
       </nav>
     </header>
+
     <main>
-
+<img src="images" alt="deal">
+<img src="images" alt="deal2">
+<h1>Best Sellers</h1>
+<img src="images" alt="game1">
+<img src="images" alt="game2">
+<img src="images" alt="game3">
+<img src="images" alt="game4">
     </main>
-    <footer>
-      <li><a href="about.index">About</a></li>
 
+    <footer>
+      <img src="images" alt="footerlogo">
+      <li><a href="about.index">About</a></li>
+      <li><a href="contact.index">Contact Us</a> </li>
     </footer>
   </body>
 </html>
