--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       <nav>
         <ul>
           <li><a href="index.html"></a>Home</a></li>
-          <li><a href="contact.index">Contact Us</a> </li>
-          <li><a href="createaccount.index">Register</a></li>
-          <li><a href="login.index">Login</a></li>
-          <li><a href="search.index">Search</a></li>
+          <li><a href="contact.html">Contact Us</a> </li>
+          <li><a href="createaccount.html">Register</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="search.html">Search</a></li>
         </ul>
       </nav>
 
       <nav>
         <ul>
-          <li> <a href="game.index">Action</a></li>
-          <li><a href="game.index">Adventure</a> </li>
-          <li><a href="game.index">Fantasy</a> </li>
-          <li><a href="game.index">RPG</a> </li>
-          <li><a href="game.index">Strategy</a> </li>
+          <li> <a href="game.html">Action</a></li>
+          <li><a href="game.html">Adventure</a> </li>
+          <li><a href="game.html">Fantasy</a> </li>
+          <li><a href="game.html">RPG</a> </li>
+          <li><a href="game.html">Strategy</a> </li>
         </ul>
       </nav>
     </header>
@@ -41,8 +41,8 @@
 
     <footer>
       <img src="images" alt="footerlogo">
-      <li><a href="about.index">About</a></li>
-      <li><a href="contact.index">Contact Us</a> </li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a> </li>
     </footer>
   </body>
 </html>
