Basic Structure of design1

--- a/account.html
+++ b/account.html
@@ -11,25 +11,28 @@
       <nav>
         <ul>
           <li><a href="index.html"></a>Home</a></li>
+          <li><a href="search.html">Search</a></li>
           <li> <a href="Account.html">Lorem Ipsum</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-    <h1>Lorem ipsum</h1>
-    <img src="images" alt="game">
-    <button>Add to cart</button>
-
-    <h2>About this game</h2>
-    <p>hfeodsifghosgfoasgfboaisjdpasodkjasoådkamcøszlmcøasdjaposudaijdaksldjal</p>
+    <h2>My Account</h2>
+    <img src="images" alt="profilepic">
 
     <ul>
-        <li>Release date: xx.xx.xxxx</li>
-        <li>Developer: dkjdskasjdl</li>
-        <li>Publisher: klsadjfliasjdloajs</li>
-        <li>Reviews: Positive(26)</li>
+        <h3>Account Details</h3>
+        <li>Name: Lorem Ipsum</li>
+        <li>Country: lorem ipsum</li>
+        <li>Email(not visible): loremipsum@gmail.com</li>
     </ul>
+
+    <h2>Your Games</h2>
+    <img src="images" alt="games">
+    <img src="images" alt="games">
+    <img src="images" alt="games">
+    <img src="images" alt="games">
     </main>
 
     <footer>
