HTML mostly done

--- a/chekcoutsuccess.html
+++ b/chekcoutsuccess.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>GameHub - The universe of games</title>
-    <meta name="description" content="This is the home page of GameHub.">
+    <meta name="description" content="You've successfully checked out.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
     <main>
-        <img src="images" alt="logo">
+        <img src="images/GameHub_Logo.png" alt="logo">
 
         <h1>Thank you for your purchase!</h1>
         <ul>
@@ -20,9 +20,10 @@
     </main>
 
     <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
     </footer>
   </body>
 </html>
