--- a/game.html
+++ b/game.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GameHub - The universe of games</title>
-    <meta name="description" content="This is the home page of GameHub.">
+    <title>Game</title>
+    <meta name="description" content="This is your selected game.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html"></a>Home</a></li>
+          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
           <li> <a href="Account.html">Lorem Ipsum</a></li>
         </ul>
       </nav>
@@ -18,7 +18,7 @@
 
     <main>
     <h1>Lorem ipsum</h1>
-    <img src="images" alt="game">
+    <img src="images/NoGame.png" alt="game">
     <button>Add to cart</button>
 
     <h2>About this game</h2>
@@ -33,9 +33,10 @@
     </main>
 
     <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
     </footer>
   </body>
 </html>
