--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html"></a>Home</a></li>
+          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
           <li><a href="search.html">Search</a></li>
           <li><a href="contact.html">Contact Us</a> </li>
           <li><a href="createaccount.html">Register</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li><a href="account.html">Login</a></li>
         </ul>
       </nav>
 
@@ -30,19 +30,20 @@
     </header>
 
     <main>
-<img src="images" alt="deal">
-<img src="images" alt="deal2">
+<img src="images/deal.jpg" alt="deal">
+<img src="images/deal.jpg" alt="deal2">
 <h1>Best Sellers</h1>
-<img src="images" alt="game1">
-<img src="images" alt="game2">
-<img src="images" alt="game3">
-<img src="images" alt="game4">
+<img src="images/NoGame.png" alt="NoGame">
+<img src="images/NoGame.png" alt="NoGame">
+<img src="images/NoGame.png" alt="NoGame">
+<img src="images/NoGame.png" alt="NoGame">
     </main>
 
     <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
     </footer>
   </body>
 </html>
