--- a/account.html
+++ b/account.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GameHub - The universe of games</title>
-    <meta name="description" content="This is the home page of GameHub.">
+    <title>My Account</title>
+    <meta name="description" content="This is your account page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html"></a>Home</a></li>
+          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
           <li><a href="search.html">Search</a></li>
           <li> <a href="Account.html">Lorem Ipsum</a></li>
         </ul>
@@ -29,16 +29,17 @@
     </ul>
 
     <h2>Your Games</h2>
-    <img src="images" alt="games">
-    <img src="images" alt="games">
-    <img src="images" alt="games">
-    <img src="images" alt="games">
+    <img src="images/NoGame.png" alt="NoGame">
+    <img src="images/NoGame.png" alt="NoGame">
+    <img src="images/NoGame.png" alt="NoGame">
+    <img src="images/NoGame.png" alt="NoGame">
     </main>
 
     <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
     </footer>
   </body>
 </html>
