--- a/checkout.html
+++ b/checkout.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GameHub - The universe of games</title>
-    <meta name="description" content="This is the home page of GameHub.">
+    <title>Checkout</title>
+    <meta name="description" content="Checkout">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
   </head>
   <body>
     <main>
-        <img src="images" alt="logo"> 
+      <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
         <li><a href="index.html"></a>Cancel</a></li>
 
         <h1>Checkout</h1>
@@ -22,9 +22,10 @@
     </main>
 
     <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
     </footer>
   </body>
 </html>
