--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-        <li><a href="index.html"></a>Home</a></li>
+      <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
         <li> <a href="Account.html">Lorem Ipsum</a></li>
 
         <h1>How can we help?</h1>
@@ -20,11 +20,5 @@
             <button>Other</button>
         </ul>
     </main>
-
-    <footer>
-      <img src="images" alt="footerlogo">
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a> </li>
-    </footer>
   </body>
 </html>
