--- a/account.html
+++ b/account.html
@@ -4,6 +4,7 @@
     <title>My Account</title>
     <meta name="description" content="This is your account page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
 
