--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <title>Checkout</title>
     <meta name="description" content="Checkout">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <main>
