--- a/chekcoutsuccess.html
+++ b/chekcoutsuccess.html
@@ -4,6 +4,7 @@
     <title>GameHub - The universe of games</title>
     <meta name="description" content="You've successfully checked out.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <main>
