--- a/createaccount.html
+++ b/createaccount.html
@@ -4,6 +4,7 @@
     <title>Register</title>
     <meta name="description" content="On this page you can register your account.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <main>
