--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <title>Game</title>
     <meta name="description" content="This is your selected game.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
 
