--- a/search.html
+++ b/search.html
@@ -4,6 +4,7 @@
     <title>Search Page</title>
     <meta name="description" content="Here you can search for your page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
 
