--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
+          <li><a href="index.html" class="active"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
           <li><a href="search.html">Search</a></li>
+        
           <li><a href="contact.html">Contact Us</a> </li>
-          <li><a href="createaccount.html">Register</a></li>
+          <li><button><a href="createaccount.html">Register</a></button></li>
           <li><a href="account.html">Login</a></li>
+
         </ul>
       </nav>
 
@@ -31,13 +33,18 @@
     </header>
 
     <main>
-<img src="images/deal.jpg" alt="deal">
-<img src="images/deal.jpg" alt="deal2">
-<h1>Best Sellers</h1>
-<img src="images/NoGame.png" alt="NoGame">
-<img src="images/NoGame.png" alt="NoGame">
-<img src="images/NoGame.png" alt="NoGame">
-<img src="images/NoGame.png" alt="NoGame">
+      <div class="deal">
+      <img src="images/deal.jpg" alt="deal">
+      <img src="images/deal.jpg" alt="deal">
+      </div>
+
+      <h1>Best Sellers</h1>
+      <div class="maingames">
+      <img src="images/NoGame.png" alt="NoGame">
+      <img src="images/NoGame.png" alt="NoGame">
+      <img src="images/NoGame.png" alt="NoGame">
+      <img src="images/NoGame.png" alt="NoGame">
+      </div>
     </main>
 
     <footer>
