Homepage base complete

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
       <!----MENU---->
     </header>
 
+
     <main>
-      <div class="deal">
-      <img src="images/deal.jpg" alt="deal">
-      <img src="images/deal.jpg" alt="deal">
-      </div>
+      <!----MAIN--->
+      <div class="container">
+        <img src="images/deal.jpg"  alt="deal">
+        <img src="images/deal.jpg"  alt="deal">
+    </div>
 
       <h1>Best Sellers</h1>
       <div class="maingames">
@@ -58,6 +60,8 @@
       <img src="images/NoGame.png" alt="NoGame">
       <img src="images/NoGame.png" alt="NoGame">
       </div>
+    </div>
+    <!----MAIN--->
     </main>
 
     <footer>
