--- a/account.html
+++ b/account.html
@@ -38,9 +38,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; RainyDays 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
