--- a/game.html
+++ b/game.html
@@ -23,7 +23,11 @@
     <button>Add to cart</button>
 
     <h2>About this game</h2>
-    <p>hfeodsifghosgfoasgfboaisjdpasodkjasoådkamcøszlmcøasdjaposudaijdaksldjal</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, urna et rhoncus sodales, 
+      enim nulla euismod ante, in feugiat elit ex at tortor. Nulla ut eleifend purus, 
+      ut pretium dui. Proin molestie, mi et semper fermentum, ligula quam tincidunt nisl, 
+      at lobortis libero neque ut diam. Curabitur nec eros ac mauris suscipit efficitur 
+      quis nec lectus. </p>
 
     <ul>
         <li>Release date: xx.xx.xxxx</li>
