--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GameHub - The universe of games</title>
-    <meta name="description" content="This is the home page of GameHub.">
+    <title>GameHub - The universe of Games</title>
+    <meta name="description" content="This is the home page of GameHub - The universe of Gam.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -21,7 +23,7 @@
         </li>
         <div class="navlinks">
           <li><a href="contact.html">Contact Us</a> </li>
-          <li><button><a href="createaccount.html">Register</a></button></li>
+          <li class="btn"><button ><a href="createaccount.html">Register</a></button></li>
           <li><a href="account.html">Login</a></li>
           <li class="cart-btn">
             <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a> 
@@ -55,20 +57,22 @@
 
       <h1>Best Sellers</h1>
       <div class="maingames">
-      <img src="images/NoGame.png" alt="NoGame">
-      <img src="images/NoGame.png" alt="NoGame">
-      <img src="images/NoGame.png" alt="NoGame">
-      <img src="images/NoGame.png" alt="NoGame">
+      <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
+      <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
+      <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a> 
+      <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
       </div>
     </div>
     <!----MAIN--->
     </main>
 
+    <!----FOOTER--->
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
       <li><a href="about.html">About GameHub</a></li>
       <li><a href="contact.html">Support</a> </li>
       //social media links
     </footer>
+    <!----FOOTER--->
   </body>
 </html>
