--- a/account.html
+++ b/account.html
@@ -38,7 +38,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      &copy; RainyDays 2020 <a href="#">Privacy Policy</a>
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
