--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           <li><a href="account.html">Login</a></li>
           <li class="cart-btn">
             <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a> 
-          </li>    
+          </li>   
+          <input type="checkbox" id="check">
+          <label for="check">
+            <i class="fas fa-bars" id="btn"></i>
+            <i class="fas fa-times" id="cancel"></i>
+          </label>
         </div>
         
         </ul>
@@ -69,9 +74,7 @@
     <!----FOOTER--->
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
     <!----FOOTER--->
   </body>
