--- a/game.html
+++ b/game.html
@@ -5,36 +5,39 @@
     <meta name="description" content="This is your selected game.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
       <nav>
-        <ul>
           <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
           <li> <a href="Account.html">Lorem Ipsum</a></li>
-        </ul>
       </nav>
     </header>
 
     <main>
-    <h1>Lorem ipsum</h1>
-    <img src="images/NoGame.png" alt="game">
-    <button>Add to cart</button>
-
-    <h2>About this game</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, urna et rhoncus sodales, 
+      <div class="gametitle">
+        <h1>Lorem ipsum</h1>
+        <img src="images/NoGame.png" alt="game">
+        <button>Add to cart</button>
+      </div>
+      
+      <div class="gameabout"></div>
+      <h2>About this game</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, urna et rhoncus sodales, 
       enim nulla euismod ante, in feugiat elit ex at tortor. Nulla ut eleifend purus, 
       ut pretium dui. Proin molestie, mi et semper fermentum, ligula quam tincidunt nisl, 
       at lobortis libero neque ut diam. Curabitur nec eros ac mauris suscipit efficitur 
       quis nec lectus. </p>
+    </div>
 
-    <ul>
+    <div class="gameinfo">
         <li>Release date: xx.xx.xxxx</li>
         <li>Developer: dkjdskasjdl</li>
         <li>Publisher: klsadjfliasjdloajs</li>
         <li>Reviews: Positive(26)</li>
-    </ul>
+  </div>
     </main>
 
     <footer>
