--- a/game.html
+++ b/game.html
@@ -18,26 +18,31 @@
 
     <main>
       <div class="gametitle">
-        <h1>Lorem ipsum</h1>
+        <h1>Lorem Ipsum</h1>
         <img src="images/NoGame.png" alt="game">
-        <button>Add to cart</button>
+        <button><a href="checkout.html">Add to Cart</a></button></li>
       </div>
       
-      <div class="gameabout"></div>
-      <h2>About this game</h2>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, urna et rhoncus sodales, 
+    <div class="gamerow">
+      <div class="gameabout">
+        <h2>About this game</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra, urna et rhoncus sodales, 
       enim nulla euismod ante, in feugiat elit ex at tortor. Nulla ut eleifend purus, 
       ut pretium dui. Proin molestie, mi et semper fermentum, ligula quam tincidunt nisl, 
       at lobortis libero neque ut diam. Curabitur nec eros ac mauris suscipit efficitur 
       quis nec lectus. </p>
-    </div>
+      </div>
 
     <div class="gameinfo">
+      <ul>
         <li>Release date: xx.xx.xxxx</li>
-        <li>Developer: dkjdskasjdl</li>
-        <li>Publisher: klsadjfliasjdloajs</li>
+        <li>Developer: xxxxxxxxxxxx</li>
+        <li>Publisher: xxxxxxxxxx</li>
+        <li></li>
         <li>Reviews: Positive(26)</li>
-  </div>
+      </ul>
+     </div>
+</div>
     </main>
 
     <footer>
