--- a/game.html
+++ b/game.html
@@ -10,9 +10,13 @@
   <body>
 
     <header>
-      <nav>
-          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
-          <li> <a href="Account.html">Lorem Ipsum</a></li>
+      <nav class="accountpage">
+        <div class="logo">
+        <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
+        </div> 
+        <div class="account">
+        <a href="Account.html">Lorem Ipsum</a>
+      </div>
       </nav>
     </header>
 
