--- a/search.html
+++ b/search.html
@@ -11,14 +11,18 @@
 
     <header>
       <nav class="pagenav">
-        <ul>
-          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
-          <li class="search-icon">
+        <div class="logo">
+         <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
+        </div>
+        <div class="search-icon">
+          <li>
             <input type="search" placeholder="Search here">
             <label class="icon">
               <a href="search.html"><span class="fas fa-search"></span></a>
-          <li> <a href="Account.html">Lorem Ipsum</a></li>
-        </ul>
+            </div>  
+        <div class="account">
+            <a href="Account.html">Lorem Ipsum</a></li>
+          </div> 
       </nav>
     </header>
 
