--- a/chekcoutsuccess.html
+++ b/chekcoutsuccess.html
@@ -5,20 +5,36 @@
     <meta name="description" content="You've successfully checked out.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
-  <body>
-    <main>
-        <img src="images/GameHub_Logo.png" alt="logo">
+  <body class="bg">
 
+    <main>
         <h1>Thank you for your purchase!</h1>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li><a href="index.html"></a>Cancel</a></li>
-        </ul>
-    </main>
+        <table>
+        <tr>
+          <td>Product</td>
+          <td>Price</td>
+        </tr>  
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="gone"></td>
+          <td class="total">Total</td>
+        </tr>
+      </table>
+
+      <div class="back">
+          <a href="index.html">Back to site</a>
+      </div>
+
+      </main>
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
