--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,51 @@
     <meta name="description" content="This is the home page of GameHub.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    
   </head>
   <body>
-    <main>
-      <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
-        <li> <a href="Account.html">Lorem Ipsum</a></li>
 
+    <header>
+      <nav class="accountpage">
+        <div class="logo">
+        <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
+        </div> 
+        <div class="account">
+        <a href="Account.html">Lorem Ipsum</a>
+      </div>
+      </nav>
+    </header>
+
+    <main class="contact">
         <h1>How can we help?</h1>
-        <li><a href="search.html">Search</a></li>
+        <div class="search-icon-contact">
+            <input type="search" placeholder="Search">
+            <label class="icon">
+              <a href="search.html"><span class="fas fa-search"></span></a>
+            </div>  
+        <div class="helpbtn">
         <ul>
             <button>Orders & Payments</button>
             <button>Returns & Refunds</button>
             <button>Game Account</button>
-            <button>Our Services</button>
-            <button>Other</button>
         </ul>
+        <ul>
+          <button>Our Services</button>
+          <button>Other</button>
+        </ul>
+      </div>
     </main>
+
+    <footer>
+      <img src="images/GameHub_Logo.png" alt="footerlogo">
+      <li><a href="about.html">About GameHub</a></li>
+      <li><a href="contact.html">Support</a> </li>
+      //social media links
+    </footer>
+  </body>
+</html>
   </body>
 </html>
