--- a/account.html
+++ b/account.html
@@ -5,35 +5,50 @@
     <meta name="description" content="This is your account page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
 
     <header>
-      <nav>
-        <ul>
-          <li><a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a></li>
-          <li><a href="search.html">Search</a></li>
-          <li> <a href="Account.html">Lorem Ipsum</a></li>
+			<div class="logo">
+				<a href="index.html"><img src="images/GameHub_Logo.png" alt="logo"/></a>
+			</div>
+			<nav>
+				<ul class="nav-links">
+					<li><a class="nav-link" href="account.html">Lorem Ipsum</a></li>
         </ul>
-      </nav>
-    </header>
+				<li class="cart-btn">
+          <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a> 
+        </li>   
+      </div>
+        </nav>
+		</header>
 
-    <main>
+    <main class="accountmain">
     <h2>My Account</h2>
-    <img src="images" alt="profilepic">
 
-    <ul>
+    <div class="accimg">
+      <img src="images/gamezone.jpg" alt="profilepic">
+
+       <ul class="accdetails">
         <h3>Account Details</h3>
         <li>Name: Lorem Ipsum</li>
-        <li>Country: lorem ipsum</li>
+        <li>Country: Lorem ipsum</li>
         <li>Email(not visible): loremipsum@gmail.com</li>
-    </ul>
+      </ul>
+  </div>
+
+   <div class="accgames">
 
     <h2>Your Games</h2>
     <img src="images/NoGame.png" alt="NoGame">
     <img src="images/NoGame.png" alt="NoGame">
     <img src="images/NoGame.png" alt="NoGame">
     <img src="images/NoGame.png" alt="NoGame">
+
+  </div>
     </main>
 
     <footer>
