--- a/account.html
+++ b/account.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>My Account</title>
     <meta name="description" content="This is your account page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
-			<div class="logo">
-				<a href="index.html"><img src="images/GameHub_Logo.png" alt="logo"/></a>
-			</div>
+      <nav class="navbar">
+			  <div class="logo">
+				  <a href="index.html"><img src="images/GameHub_Logo.png" alt="logo"/></a>
+			  </div>
 			<nav>
 				<ul class="nav-links">
 					<li><a class="nav-link" href="account.html">Lorem Ipsum</a></li>
@@ -24,11 +25,13 @@
         </li>   
       </div>
         </nav>
+        </nav>
 		</header>
 
-    <main class="accountmain">
-    <h2>My Account</h2>
-
+    <main>
+      <section class="acch">
+         <h2>My Account</h2>
+      </section>
     <div class="accimg">
       <img src="images/gamezone.jpg" alt="profilepic">
 
@@ -40,20 +43,18 @@
       </ul>
   </div>
 
-   <div class="accgames">
-
-    <h2>Your Games</h2>
-    <img src="images/NoGame.png" alt="NoGame">
-    <img src="images/NoGame.png" alt="NoGame">
-    <img src="images/NoGame.png" alt="NoGame">
-    <img src="images/NoGame.png" alt="NoGame">
-
-  </div>
+   <div class="games">
+     <h2>Your Games</h2>
+     <img src="images/NoGame.png" alt="NoGame">
+     <img src="images/NoGame.png" alt="NoGame">
+     <img src="images/NoGame.png" alt="NoGame">
+     <img src="images/NoGame.png" alt="NoGame">
+   </div>
     </main>
 
-    <footer>
+  <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
       &copy; GameHub 2020 <a href="#">Privacy Policy</a>
-    </footer>
+  </footer>
   </body>
 </html>
