--- a/checkout.html
+++ b/checkout.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Checkout</title>
     <meta name="description" content="This is the checkout page of GameHub.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body class="bg">
 
     <header>
-      <nav class="createacc">
+      <nav class="navbar">
          <div class="logo">
            <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
       </div>
@@ -45,9 +48,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
