--- a/chekcoutsuccess.html
+++ b/chekcoutsuccess.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>GameHub - The universe of games</title>
     <meta name="description" content="You've successfully checked out.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body class="bg">
 
     <main>
+      <div class="ty">
         <h1>Thank you for your purchase!</h1>
         <table>
         <tr>
@@ -33,14 +36,12 @@
       <div class="back">
           <a href="index.html">Back to site</a>
       </div>
-
+    </div>
       </main>
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
