--- a/createaccount.html
+++ b/createaccount.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Register</title>
     <meta name="description" content="On this page you can register your account.">
@@ -44,9 +44,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
