--- a/game.html
+++ b/game.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Game</title>
     <meta name="description" content="This is your selected game.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
-      <nav class="accountpage">
+      <nav class="navbar">
         <div class="logo">
         <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
         </div> 
@@ -44,7 +45,7 @@
         <li>Developer: xxxxxxxxxxxx</li>
         <li>Publisher: xxxxxxxxxx</li>
         <li></li>
-        <li>Reviews: Positive(26)</li>
+        <li>Reviews: Positive (26)</li>
       </ul>
      </div>
 </div>
@@ -52,9 +53,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
