--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <title>GameHub - The universe of Games</title>
     <meta name="description" content="This is the home page of GameHub - The universe of Gam.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-   
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
+
   <body>
 
+    
     <header>
+      <nav class="navbar"></nav>
 			<div class="logo">
 				<img src="images/GameHub_Logo.png" alt="logo" />
         <li class="search-icon">
@@ -57,7 +59,7 @@
     </div>
 
       <h1>Best Sellers</h1>
-      <div class="maingames">
+      <div class="games">
       <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
       <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
       <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a> 
