--- a/search.html
+++ b/search.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Search Page</title>
     <meta name="description" content="Here you can search for your page.">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
-      <nav class="pagenav">
+      <nav class="navbar">
         <div class="logo">
          <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
         </div>
@@ -26,7 +28,7 @@
       </nav>
     </header>
 
-    <main class="searchpagemain">
+    <main>
       <div class="game">
         <div class="gameimg"><a href="game.html"><img src="images/NoGame.png" alt="NoGame">
         <div class="gametext">
@@ -62,9 +64,7 @@
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
-      <li><a href="about.html">About GameHub</a></li>
-      <li><a href="contact.html">Support</a> </li>
-      //social media links
+      &copy; GameHub 2020 <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
