--- a/checkout.html
+++ b/checkout.html
@@ -16,13 +16,14 @@
       <nav class="navbar">
          <div class="logo">
            <a href="index.html"><img src="images/GameHub_Logo.png" alt="Logo"></a>
-      </div>
+         </div>
          <div class="registertext">
            <h1>Checkout</h1>
-      </div>
+         </div>
          <div class="registercancel">
            <a href="index.html">Cancel</a>
-      </div>
+         </div>     
+      </nav>
     </header>
 
     <main class="register">
@@ -43,8 +44,7 @@
 
           <button type="submit" class="registerbtn"><a href="chekcoutsuccess.html"> Pay Now</a></button>
         </div>
-  </div>
-</main>
+     </main>
 
     <footer>
       <img src="images/GameHub_Logo.png" alt="footerlogo">
