--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
       <div class="gametitle">
         <h1>Lorem Ipsum</h1>
         <img src="images/NoGame.png" alt="game">
-        <button><a href="checkout.html">Add to Cart</a></button></li>
+        <button><a href="checkout.html">Add to Cart</a></button>
       </div>
       
     <div class="gamerow">
