--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
     <header>
-      <nav class="navbar"></nav>
+      <nav class="navbar">
 			<div class="logo">
 				<img src="images/GameHub_Logo.png" alt="logo" />
         <li class="search-icon">
@@ -37,7 +37,6 @@
 			</div>
 		</header>
 
-
       <!----MENU---->
       <nav class="nav2">
         <ul>
@@ -48,15 +47,13 @@
           <li><a href="game.html">Strategy</a> </li>
         </ul>
       </nav>
-    </header>
-
 
     <main>
       <!----MAIN--->
       <div class="container">
         <img src="images/deal.jpg"  alt="deal">
         <img src="images/deal.jpg"  alt="deal">
-    </div>
+      </div>
 
       <h1>Best Sellers</h1>
       <div class="games">
@@ -65,7 +62,6 @@
       <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a> 
       <a href="game.html"> <img src="images/NoGame.png" alt="NoGame"> </a>
       </div>
-    </div>
     </main>
 
     <!----FOOTER--->
