--- a/search.html
+++ b/search.html
@@ -21,10 +21,11 @@
             <input type="search" placeholder="Search here">
             <label class="icon">
               <a href="search.html"><span class="fas fa-search"></span></a>
-            </div>  
+         </div>  
         <div class="account">
-            <a href="Account.html">Lorem Ipsum</a></li>
-          </div> 
+            <a href="Account.html">Lorem Ipsum</a>
+          </li>
+        </div> 
       </nav>
     </header>
 
